gsa/scripts/devvpc/k8s/nginx/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: conexus-nginx
  namespace: ingress-nginx
  labels:
    app: conexus-nginx
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: conexus-nginx
