gsa/scripts/devvpc/k8s/nginx/nginx-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conexus-nginx-ingress
  namespace: ingress-nginx
  annotations:
    ##nginx.ingress.kubernetes.io/whitelist-source-range: "199.128.0.0/11"
    #nginx.ingress.kubernetes.io/proxy-read-timeout: "2700"
    #nginx.ingress.kubernetes.io/proxy-send-timeout: "2700"
    #nginx.ingress.kubernetes.io/proxy-body-size: 20m
    #nginx.ingress.kubernetes.io/configuration-snippet: |
      #more_set_headers "X-Forwarded-For $http_x_forwarded_for" "X-Forwarded-Port 443";
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/proxy-redirect-from: "https://ui.dev.cnxs.vpcaas.fcs.gsa.gov:80/"
    #nginx.ingress.kubernetes.io/proxy-redirect-to: "https://ui.dev.cnxs.vpcaas.fcs.gsa.gov/"
    ##cert-manager.io/cluster-issuer: letsencrypt-prod-sandbox
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-mode: "shared"
    service.beta.kubernetes.io/aws-load-balancer-name: "conexus-api-internal-alb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0826111a038991700"
    #ingress.cilium.io/tls-passthrough: enabled
spec:
  ingressClassName: cilium
  rules:
  - host: api.dev.cnxs.vpcaas.fcs.gsa.gov
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: conexus-nginx
            port:
              number: 80
  - host: ui.dev.cnxs.vpcaas.fcs.gsa.gov
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: conexus-httpd           
            port:
              number: 80
  tls:
  - hosts:
    - "api.dev.cnxs.vpcaas.fcs.gsa.gov"
    - "ui.dev.cnxs.vpcaas.fcs.gsa.gov"
    secretName: devwildcard
